integration_tests/codegen_fail/fail/subscription/field_double_underscored.stderr
error: #[graphql_subscription] attribute is applicable to non-trait `impl` blocks only
 --> $DIR/field_double_underscored.rs:9:1
  |
9 | #[graphql_subscription]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
